[gd_scene format=3 uid="uid://dhppyf1y4otgk"]

[ext_resource type="Script" uid="uid://da5txdpgdjcu7" path="res://src/page/download/download_confirm.gd" id="1_2r55n"]

[node name="DownloadConfirm" type="ConfirmationDialog" unique_id=1392267383]
oversampling_override = 1.0
position = Vector2i(0, 36)
size = Vector2i(372, 110)
visible = true
script = ExtResource("1_2r55n")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=2071972493]
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 61.0
grow_horizontal = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=1139881922]
layout_mode = 2

[node name="PingContainer" type="VBoxContainer" parent="VBoxContainer" unique_id=709997604]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer" unique_id=1031333277]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=872519067]
layout_mode = 2

[node name="UrlLine" type="LineEdit" parent="VBoxContainer/HBoxContainer" unique_id=860932887]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "url"
editable = false

[node name="SourceOption" type="OptionButton" parent="VBoxContainer/HBoxContainer" unique_id=1846271872]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/SourceOption" to="." method="_on_source_option_item_selected"]
